# gestio1

./: README.md  database.py  dependencias.txt  fusiles.db  main.py  migrate_data.py  pyproject.toml  requeriments.txt
